# dcm2dir

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  VERSIONS.md  dcm2dir.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: pylint.yml  pylint_pytest.yml
dcm2dir/: dcm2dir.py
dcm2dir/anonymize/: __init__.py
tests/: test_dcm2dir.py
