[metadata]
name = dcm2dir
version = v1.0.0.20250328
author = Luca Peretti
author_email = luca_peretti@hotmail.com
description = dcm2dir: Organize DICOM files into a structured output folder.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HoenikkerPerez/dcm2dir
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Medical Science Apps.

[options]
packages = find:
python_requires = >=3.6
install_requires =
    pydicom
    tqdm

[options.entry_points]
console_scripts =
    dcm2dir = dcm2dir:dcm2dir.dcm2dir.main